[gd_scene load_steps=2 format=3 uid="uid://p3expenobhj3"]

[ext_resource type="Script" path="res://ios_subscription.gd" id="1_1b8pj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1b8pj")

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
